syntax = "proto3";

package shipping;
option go_package = "/proto/shipping;shipping";


message Item {
  string product_id = 1;
  int32 quantity = 2;
}

message ShippingRequest {
  string user_id = 1;
  repeated Item items = 2;
}

message ShippingResponse {
  string shipping_id = 1;
  string status = 2;
}

service ShippingService {
  rpc CreateShipment(ShippingRequest) returns (ShippingResponse);
}
